# fate

./: .gitignore  AGENTS.md  README.md  components.json  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: cyber-xianxia-tarot-deck.generated.json  cyber-xianxia-tarot-generation-prompt.json  cyber-xianxia-tarot-sheet-prompts.generated.json
scripts/: build-desk-decor-bg.mjs  build-desk-decor.mjs  export-tarot-json.mjs  export-tarot-sheet-prompts.mjs
src/: App.jsx  BreakOverlay.jsx  main.jsx  styles.css  views.jsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  ai.rs  data.rs  input.rs  main.rs  overlay.rs  shared.rs  window.rs
src/app/: ai-config.local.example.js  domain.js  i18n.jsx  images.js  persistence.js
src/components/ui/: button.jsx  input.jsx  label.jsx  native-select.jsx  textarea.jsx
src/data/: cyberXianxiaTarot.js
