[package]
name = "fate"
version = "0.1.4"
description = "A lightweight rest reminder built with Tauri"
authors = ["zhaoolee"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
